--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,36 +1,16 @@
-cmake_minimum_required(VERSION 3.0.0)
+cmake_minimum_required(VERSION 3.7.0)
 
-project(JlTranslatorTool VERSION 0.1 LANGUAGES CXX)
+project(JlTranslator VERSION 0.1)
 
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
-set(CMAKE_AUTOMOC ON)
+set(CMAKE_BINARY_DIR "../build")
 
-find_package(Qt5Core)
-find_package(Qt5Widgets)
-find_package(Qt5WebEngineWidgets)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
-qt5_wrap_ui(uifiles MainWindow.ui QSettingsDlg.ui)
+#add_subdirectory(JlUtil)
+add_subdirectory(JlTranslatorTool)
 
-add_executable(${PROJECT_NAME}
-    main.cpp
-    JlWebTranslatorWrapper.cpp
-    JlDtdFileProcessor.cpp
-    QSettingsDlg.cpp
-    QSettingsDlg.ui
-    MainWindow.cpp
-    MainWindow.ui
-    test.cpp
-)
+#add_dependencies(JlTranslatorTool JlUtil)
 
-target_link_libraries(${PROJECT_NAME} Qt5::Core)
-target_link_libraries(${PROJECT_NAME} Qt5::Widgets)
-target_link_libraries(${PROJECT_NAME} Qt5::WebEngineWidgets)
-target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
 
-#add_custom_command(TARGET ${PROJECT_NAME}
-#  # Run after all other rules within the target have been executed
-# POST_BUILD
-#  COMMAND cmake -E copy ${CMAKE_CURRENT_LIST_DIR}/focus_log ${CMAKE_CURRENT_LIST_DIR}/focus_log_1 ${CMAKE_CURRENT_LIST_DIR}/focus_log_2 ${CMAKE_BINARY_DIR}/${CMAKE_CFG_INTDIR}
-#  COMMENT "Copying ${CMAKE_CURRENT_LIST_DIR}/focus_log ${CMAKE_CURRENT_LIST_DIR}/focus_log_1 ${CMAKE_CURRENT_LIST_DIR}/focus_log_2 ${CMAKE_BINARY_DIR}/${CMAKE_CFG_INTDIR}"
-#  VERBATIM
-#)
