--- a/JlTranslatorTool/CMakeLists.txt
+++ b/JlTranslatorTool/CMakeLists.txt
@@ -11,7 +11,7 @@ find_package(Qt5WebEngineWidgets)
 
 qt5_wrap_ui(uifiles MainWindow.ui QSettingsDlg.ui)
 
-add_executable(${PROJECT_NAME}
+add_executable(${PROJECT_NAME} WIN32
     main.cpp
     JlWebTranslatorWrapper.cpp
     JlDtdFileProcessor.cpp
@@ -27,10 +27,11 @@ target_link_libraries(${PROJECT_NAME} Qt5::Widgets)
 target_link_libraries(${PROJECT_NAME} Qt5::WebEngineWidgets)
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
 
-#add_custom_command(TARGET ${PROJECT_NAME}
-#  # Run after all other rules within the target have been executed
-# POST_BUILD
-#  COMMAND cmake -E copy ${CMAKE_CURRENT_LIST_DIR}/focus_log ${CMAKE_CURRENT_LIST_DIR}/focus_log_1 ${CMAKE_CURRENT_LIST_DIR}/focus_log_2 ${CMAKE_BINARY_DIR}/${CMAKE_CFG_INTDIR}
-#  COMMENT "Copying ${CMAKE_CURRENT_LIST_DIR}/focus_log ${CMAKE_CURRENT_LIST_DIR}/focus_log_1 ${CMAKE_CURRENT_LIST_DIR}/focus_log_2 ${CMAKE_BINARY_DIR}/${CMAKE_CFG_INTDIR}"
-#  VERBATIM
-#)
+if (WIN32)  
+add_custom_command(TARGET ${PROJECT_NAME}
+  POST_BUILD
+  COMMAND  $ENV{QT_DIR}/bin/windeployqt.exe ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}
+  COMMENT "Executing $ENV{QT_DIR}/bin/windeployqt.exe ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}"
+  VERBATIM
+)
+endif (WIN32)
