--- a/JlTranslatorTool/CMakeLists.txt
+++ b/JlTranslatorTool/CMakeLists.txt
@@ -31,6 +31,18 @@ target_link_libraries(${PROJECT_NAME} Qt5::Widgets)
 target_link_libraries(${PROJECT_NAME} Qt5::WebEngineWidgets)
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
 
+add_custom_command(TARGET ${PROJECT_NAME}
+  COMMAND cmake -E copy ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/LICENSE.LGPLv21 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}
+  COMMENT "Copying ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/LICENSE.LGPLv21 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}"
+  VERBATIM # to support \t for example
+)
+
+add_custom_command(TARGET ${PROJECT_NAME}
+  COMMAND cmake -E copy ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/LICENSE.LGPLv3 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}
+  COMMENT "Copying ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/LICENSE.LGPLv3 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}"
+  VERBATIM # to support \t for example
+)
+
 if (WIN32)  
 add_custom_command(TARGET ${PROJECT_NAME}
   POST_BUILD
