JlTranslatorTool: AboutThirdPartySoftware.txt has been added.

--- a/JlTranslatorTool/CMakeLists.txt
+++ b/JlTranslatorTool/CMakeLists.txt
@@ -34,13 +34,19 @@ target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
 add_custom_command(TARGET ${PROJECT_NAME}
   COMMAND cmake -E copy ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/LICENSE.LGPLv21 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}
   COMMENT "Copying ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/LICENSE.LGPLv21 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}"
-  VERBATIM # to support \t for example
+  VERBATIM
 )
 
 add_custom_command(TARGET ${PROJECT_NAME}
   COMMAND cmake -E copy ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/LICENSE.LGPLv3 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}
   COMMENT "Copying ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/LICENSE.LGPLv3 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}"
-  VERBATIM # to support \t for example
+  VERBATIM
+)
+
+add_custom_command(TARGET ${PROJECT_NAME}
+  COMMAND cmake -E copy ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/AboutThirdPartySoftware.txt ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}
+  COMMENT "Copying ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/AboutThirdPartySoftware.txt ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}"
+  VERBATIM
 )
 
 if (WIN32)  
